styles/less/module2/navbar-slide.less
/* wrapper for the navbar */
.bottom-navbar-wrapper{
    background-color:@navbar-mobile-collapse-bg;
}
/* navbar for mobile first */
/* navbars can be of different themes here it is the default navbar */
.navbar{
    position: relative;

    margin-bottom:@navbar-margin-bottom;
    // privent floats from breaking the navbar
    &:extend(.clearfix all);
	.navbar-default{
		margin:0 -15px;
	}
}//.navbar
// navbar header:
.navbar{
    .navbar-header{
        // mobile first rule:
	padding:5px 0px;
	background-color:@top-header-bg ;
	.navbar-brand{
		padding:5px 15px;
                float:left;
		font-size:16px;
		font-weight:bold;
		color:@navbar-mobile-color;
		text-decoration:none;
	}
	//desktop
	@media (min-width: @grid-float-breakpoint) {
		display:none;
	}//desktop

    }//.navbar-header
}//.navbar
// collapsing navbar for mobile
.navbar{
    .navbar-collapse{

        // for desktop to make the navbar visible:

       @media (min-width: @grid-float-breakpoint) {//for desktop
          width: auto;
          border-top: 0;
          box-shadow: none;
          &.collapse {
             display: block !important;
             visibility: visible !important;
             height: auto !important;
             padding-bottom: 0; // Override default setting
             overflow: visible !important;
          }
          		.navbar-nav{//design of the ul for links
                   		margin: 0;
		             	padding: 0;
			li{
				list-style-type: none;
				//for desktop and for mobile it is done by angular js codes
				display: inline-block;
			}//li
			> li{
                                // 1 normal link anchor's css
				 > a{
				   color: @navbar-color; display: block; line-height: @navbar-line-height;
				   padding: 0 24px; text-decoration: none;
				   //desktop

					display: inline-block; 
					border-bottom:4px solid transparent;
					.transition(~"border-bottom-color ease-in-out 0.15s, color ease-out 0.15s");
					font-weight:bold;

				}//a
                                // 2 when you hover over the li element
				&:hover{
					 > a{
						color: @navbar-navitem-hover-color;
						    border-bottom:4px solid @navbar-navitem-hover-color;

					}//a
				}//li:hover
                                // 3 when li item has class 'active'
				&.active{
					 > a{
						color:@navbar-navitem-active-color; cursor:default;
						border-bottom:4px solid @navbar-navitem-active-color;
					}//a
					&:hover{// li element is active and hovered 
						> a{
							color:@navbar-navitem-active-color; cursor:default;
							border-bottom:4px solid @navbar-navitem-active-color;

						}
					}//&> li.active
				}// active

			}//& > li
		}//.navbar-nav ul list design for desktop
       }//for desktop to make menu visible
        //for mobile screen:
         @media (max-width: @grid-float-breakpoint-max) {
        position:fixed;
        z-index:200;
        background-color:#67b5d1;

        margin:0 -15px;
        width: 300px;
        height: 100%;
        overflow-y: scroll;
             transition: transform 0.3s;
             transform: translateX(-300px);
        // the ul list inside it:
        .navbar-nav{//ul list
            li{
                 list-style:none;
                 margin:0;
                 padding:0;
                display: block;
                text-align: center;
                 border-top: solid 1px #b5dbe9;
                 border-bottom: solid 1px #3184a1;
                 &:first-child{
                     border-top:none;
                 }//first-child
                 &:last-child{
                     border-bottom:none;
                 }//first-child
                 a {
                   display: block;
                   padding: 12px 24px;
                   color: #fff;


                 }//a
            }//li

        }//.navbar-nav (ul list)
            &.collapse{
                display:block !important;
                visibility: visible !important;
               &.isActive{
                   transform: translateX(0);
               }//.isActive
           }//.collapse
       }//for mobile screen
    }//.navbar-collapse
}//.navbar
// Navbar toggle
//
// Custom button for toggling the `.navbar-collapse`, powered by the collapse
// JavaScript plugin.
.navbar{
.navbar-toggle {
  position: relative;
  float: right;
  margin-right: @navbar-padding-horizontal;
  padding: 9px 10px;
  //.navbar-vertical-align(34px);
  background-color: transparent;
  // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
  background-image: none;
  border: 1px solid transparent;
  border-radius: @border-radius-base;

  // We remove the `outline` here, but later compensate by attaching `:hover`
  // styles to `:focus`.
  &:focus {
    outline: 0;
  }

  // Bars
  .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    border-radius: 1px;
  }
  .icon-bar + .icon-bar {
    margin-top: 4px;
  }

  //desktop
  @media (min-width: @grid-float-breakpoint) {
    display: none;
  }
}
}//.navbar

// different navbar styles:

// Default navbar
.navbar-default {
  //background-color: @navbar-default-bg;
  //border-color: @navbar-default-border;

  .navbar-brand {
/*
    color: @navbar-default-brand-color;
    &:hover,
    &:focus {
      color: @navbar-default-brand-hover-color;
      background-color: @navbar-default-brand-hover-bg;
    }
*/
  }

  .navbar-text {
    color: @navbar-default-color;
  }

  .navbar-toggle {
    border-color: @navbar-default-toggle-border-color;
    &:hover,
    &:focus {
      background-color: @navbar-default-toggle-hover-bg;
    }
    .icon-bar {
      background-color: @navbar-default-toggle-icon-bar-bg;
    }
  }


    
  }//.navbar-default

/**
 * Mask component
 */

.menu-mask {
         @media (max-width: @grid-float-breakpoint-max) {
  position: fixed;
  z-index: 100;
  top: 45px;
  left: 0;
  overflow: hidden;
  width: 0;
  height: 0;
  background-color: #000;
  opacity: 0;
  transition: opacity 0.3s, width 0s 0.3s, height 0s 0.3s;
}// for mobile
       @media (min-width: @grid-float-breakpoint) {//for desktop
          display:none;
      }//desktop
}

.menu-mask.isActive {
         @media (max-width: @grid-float-breakpoint-max) {
  width: 100%;
  height: 100%;
  opacity: 0.7;
  transition: opacity 0.3s;
  }//for mobile
}

